bg: fix styling on safari

--- a/src/styles/auth-layout.css
+++ b/src/styles/auth-layout.css
@@ -1,12 +1,6 @@
 .auth-container {
-    background: rgb(136, 188, 176);
     background: linear-gradient(49deg, #acdbd3 0%, #216353 100%);
     min-height: 100vh;
-    padding: 12% 20%;
-}
-
-@media only screen and (max-width: 1024px) {
-    .auth-container {
-        padding: 12% 7%;
-    }
+    height: auto !important;
+    overflow: hidden;
 }
