--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -10,6 +10,8 @@
 .signup-section {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 10px;
+  width: 70%;
+	margin: 11% auto;
 }
 
 .signup-form {
@@ -101,5 +103,11 @@ label {
 @media only screen and (max-width: 1024px) {
   .signup-section, .signup-form, .signup-info {
     border-radius: 0;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .signup-section {
+    width: 90%;
   }
 }
